<resources>
    <string name="app_name">Form</string>
    <string name="f_name_hint">First Name</string>
    <string name="l_name_hint">Last Name</string>
    <string name="select_date">Select Date</string>
    <string name="id_hint">1234</string>
    <string name="text_hint">Enter Full Name</string>
    <string name="text_hint2">Enter your school ID number</string>
    <string name="text_hint3">Select your Department</string>
    <string name="text_hint4">Select a date</string>
    <string name="next_btn">Next</string>
    <string name="lang_amh">Amharic</string>
    <string name="lang_eng">English</string>
    <string name="stud_id">Student ID:</string>
    <string name="stud_dep">Student Department:</string>
    <string name="stud_date">Student Joined on:</string>
    <string name="pro_content_desc">User Profile picture</string>
    <string name="cam_content_desc">Take a picture with camera</string>
    <string name="gal_content_desc">Select a picture from gallery</string>
    <string name="date_picked">Date Picked </string>
    <string name="change_date">CHANGE DATE</string>
    <string name="dep_not">Department not selected yet</string>
    <array name="course">
        <item>Select department</item>
        <item>Accounting</item>
        <item>Computer Science</item>
        <item>Management</item>
        <item>Marketing</item>
    </array>
    <string name="full_name_toast">Enter Full name first</string>
    <string name="f_name_toast">Enter First name</string>
    <string name="lname_toast">Enter Last name</string>
    <string name="id_toast">Enter ID</string>
    <string name="today_toast">Today\'s date has been chosen</string>


</resources>